--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-
+<html>
+  <header>
+    
+  </header>
+  <body>
+    <button omclick="window.location.href='lista.html'">Vai</button>
+  </body>
+</html>
+<script>
+  
+</script>
