--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     
   </header>
   <body>
-    <button omclick="window.location.href='lista.html'">Vai</button>
+    <button onclick="window.location.href='lista.html'">Vai</button>
   </body>
 </html>
 <script>
